--- a/This is Jin/index.html
+++ b/This is Jin/index.html
@@ -103,20 +103,20 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                         <h2>Seleted Designs</h2>
-                         <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p>
+                         <h2>My personality</h2>
+                         <p>I believe you would need the employee who got these personality traits.</p>
                     </div>
                </div>
 
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image1.jpg" class="image-popup">
+                         <a href="images/sun-flower.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">First Title</h4>
-                                   <h2>Graphic Design</h2>
+                                   <h4 class="white-color">First</h4>
+                                   <h2>Think positive</h2>
                               </div>
-                              <img src="images/work-image1.jpg" class="img-responsive" alt="Work 1">
+                              <img src="images/sun-flower.jpg" class="img-responsive" alt="Work 1">
                          </a>
                     </div>
                </div>
@@ -124,12 +124,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image2.jpg" class="image-popup">
+                         <a href="images/test1.jpeg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Title Two</h4>
-                                   <h2>Photography</h2>
+                                   <h4 class="white-color">Second</h4>
+                                   <h2>Prioritize benefits of the company </h2>
                               </div>
-                              <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
+                              <img src="images/test1.jpeg" class="img-responsive" alt="Work 2">
                          </a>
                     </div>
                </div>
@@ -137,12 +137,48 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image3.jpg" class="image-popup">
+                         <a href="images/test2.jpeg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Third Title</h4>
-                                   <h2>illustration</h2>
+                                   <h4 class="white-color">Third</h4>
+                                   <h2>Good at analysis</h2>
                               </div>
-                              <img src="images/work-image3.jpg" class="img-responsive" alt="Work 3">
+                              <img src="images/test2.jpeg" class="img-responsive" alt="Work 3">
+                         </a>
+                    </div>
+               </div>
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/communication.jpeg" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Forth</h4>
+                                   <h2>Good communication</h2>
+                              </div>
+                              <img src="images/communication.jpeg" class="img-responsive" alt="Work 4">
+                         </a>
+                    </div>
+               </div>
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/actively.jpg" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Fifth</h4>
+                                   <h2>Actively worker</h2>
+                              </div>
+                              <img src="images/actively.jpg" class="img-responsive" alt="Work 5">
+                         </a>
+                    </div>
+               </div>
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/loyalty.jpeg" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Sixth</h4>
+                                   <h2>Loyalty worker</h2>
+                              </div>
+                              <img src="images/loyalty.jpeg" class="img-responsive" alt="Work 6">
                          </a>
                     </div>
                </div>
