--- a/This is Jin/index.html
+++ b/This is Jin/index.html
@@ -79,8 +79,9 @@ http://www.tooplate.com/view/2087-kalay
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
                               <p>我是李秉謙，畢業於靜宜大學數學系，在大學期間曾經在補習班兼課教數學，也做過鞋全家福，Levi's的門市銷售員</p>
-                              <p>畢業後從軍一年，履行台灣男人的義務,為了不想浪費這一年，也選了較有挑戰性的傘兵特種部隊，這一年我曾與生命搏鬥過，這樣子的經驗令我成為更為堅強勇敢無畏挑戰的男人</p>
-                              <p>退伍後認為自己的語言程度還有進步的空間，利用自己的積蓄到菲律賓進修英語半年，回國後因緣際會下接觸到紅酒，目前在五路達酒業任職<p>
+                              <p>畢業後從軍一年，履行身為台灣男人的義務,為了不想浪費這一年，也選了較有挑戰性的傘兵特種部隊，這一年我曾與生命搏鬥過，這樣子的經驗令我成為更為堅強勇敢無畏挑戰的男人</p>
+                              <p>退伍後認為自己的語言程度還有進步的空間，所以決定前往菲律賓進修英語半年，回國後因緣際會下接觸到紅酒，目前在五路達葡萄酒代理商擔任業務一職<p>
+                              <p>I am Lee Ping Chien, I am a graduate of Financial and Computational Mathematics at Providence University in Taiwan, During this period I study not only hard but also worked as a salesperson in two companies, also I was a Mathematics teacher thus this experience taught me how to communicate with other people and deal with them professionally. I have finished my one year military service training and become a paratrooper at that this year. After that I realized I should imporve my English so that I went to Philippines to studied Enlgish for six months. Now I am working as a sales in wine company. I believe my working experience and knowledge about this field can help me become efficient worker in your company. I am hard working,outgoing,goal oriented,responsible person, I can work without supervision.<p>
                          </div>
                     </div>
                </div>
@@ -228,7 +229,7 @@ http://www.tooplate.com/view/2087-kalay
                               <li><a href="https://www.facebook.com/JinLee1993" class="fa fa-facebook"></a></li>
                               <li><a href="https://twitter.com/NakanishiJin511" class="fa fa-twitter"></a></li>
                               <li><a href="https://www.instagram.com/pucoach_jin/" class="fa fa-instagram"></a></li>
-                              <li><a href="#" class="fa fa-behance"></a></li>
+                              
                               <li><a href="https://github.com/jinli1993" class="fa fa-github"></a></li>
                          </ul>
                     </div>
