--- a/This is Jin/index.html
+++ b/This is Jin/index.html
@@ -100,7 +100,7 @@ http://www.tooplate.com/view/2087-kalay
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                          <h2>My Personality</h2>
-                         <p>I believe that my personality traits suit in your company</p>
+                         <p>I believe that my personality traits suit to work in your company</p>
                     </div>
                </div>
 
