--- a/Jin's Resume/index.html
+++ b/Jin's Resume/index.html
@@ -398,8 +398,24 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/f.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/m.jpg" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Military</h3>	     					    
+		     					    	<!--<span class="folio-types">
+		     					       	  Web Design
+		     					      </span>-->		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+
+	            <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/f.jpg"alt="Clouds">
+	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">French Friend</h3>	     					    
@@ -414,27 +430,11 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/p.jpg"alt="Clouds">
-	                  <a href="#modal-03" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Paratrooper</h3>	     					    
-		     					    	<!--<span class="folio-types">
-		     					       	  Web Design
-		     					      </span>-->		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/m.jpg" alt="Beetle">
+	               	<img src="images/portfolio/p.jpg" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Military</h3>	     					    
+	                     		<h3 class="folio-title">Paratrooper</h3>	     					    
 		     					    	<!--<span class="folio-types">
 		     					       	  Branding
 		     					      </span>-->		     		
