--- a/Jin's Resume/index.html
+++ b/Jin's Resume/index.html
@@ -320,7 +320,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>NEXSYS CORPORTATION</h3>
+	   					<h3>NEXSYS CORPORATION</h3>
 	   					<p>May 2017 - Present</p>
 	   				</div>
 
