--- a/Jin's Resume/index.html
+++ b/Jin's Resume/index.html
@@ -124,7 +124,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>This is Jin who is the positive guy in the world, and I am a good listener and also good communicator.</p>
+   			<p>I am an experienced Project manager and seeking a full-time position in the field of a Marketing Executive, where I can apply my knowledge and skills for continuous improvement.</p>
 
    			<ul class="info-list">
    				<li>
@@ -259,21 +259,20 @@
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<!--<div class="timeline-block">
+	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>STUDY TOUR</h3>
+	   					<p>OCTOBER 2016 - MARCH 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>-->
+	   					<h4>ENGLISH</h4>
+	   					<p>I studied English in the Philippines for six months after I had finished military service. The strategy for this plan which doesn't speak any Chinese so that I made a lot of foreign friends from this experience and also got to know the culture of Philippines. I thought the most worthwhile thing during these six months that I improve English a lot. </p> 
 
 	   			</div> <!-- /timeline-block -->
 
