--- a/Jin's Resume/index.html
+++ b/Jin's Resume/index.html
@@ -124,7 +124,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I am an experienced Project manager and seeking a full-time position in the field of a Marketing Executive, where I can apply my knowledge and skills for continuous improvement.</p>
+   			<p>I work as Project manager in Nexsys corporation and seeking a full-time position in the field of a Marketing Executive, where I can apply my knowledge and skills for continuous improvement.</p>
 
    			<ul class="info-list">
    				<li>
