--- a/Jin's Resume/index.html
+++ b/Jin's Resume/index.html
@@ -325,7 +325,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Sale Representative</h4>
-	   					<p>Sales EDC(Credit Card Machine) to banks or clients of other industry and also deal with them. We plan, budget, monitor, and report on the project, sometimes pitching the idea of the project or being assigned to it once it’s already been approved. I manager is the bridge between intracompany and all of the clients tasked with the actual execution of the project. </p>
+	   					<p>Sales EDC(Electronic Data Capture) to banks or clients of other industry and also deal with them. We plan, budget, monitor, and report on the project, sometimes pitching the idea of the project or being assigned to it once it’s already been approved. What I manage is the bridge between intracompany and all of the clients tasked with the actual execution of the project. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
